--- a/docs/0.2.1 更新日志.md
+++ b/docs/0.2.1 更新日志.md
@@ -1,9 +1,24 @@
-# JsonLang 0.2.1 更新日志
+# JLang 0.2.1 更新日志
 
-## 新特性
-- **递归函数调用支持**：完整支持递归函数调用，使复杂算法的实现成为可能
-- **函数局部变量作用域**：优化函数调用过程中的变量管理，避免变量污染
-- **嵌套数据访问**：支持多层嵌套的数据结构访问，如 `nested_data.level1.level2.value`
+## 主要更新
+
+1. **递归函数支持**
+   - 增加了对函数自身递归调用的支持
+   - 添加了递归阶乘和斐波那契数列示例
+
+2. **局部变量作用域**
+   - 函数内的变量现在具有局部作用域
+   - 添加了变量遮蔽（shadowing）支持
+   - 函数参数作为局部变量处理
+
+3. **错误处理改进**
+   - 增加了对递归深度超限的检测
+   - 改进了变量作用域相关的错误信息
+   - 优化了递归调用的栈跟踪
+
+4. **新示例程序**
+   - 递归函数示例：`examples/digui.jl`系列
+   - 斐波那契数列计算：`examples/fibonacci.jl`
 
 ## 优化
 - **上下文状态管理**：执行函数前保存上下文状态，执行后恢复变量环境
