--- a/docs/0.2.2.md
+++ b/docs/0.2.2.md
@@ -1,52 +1,90 @@
-# JsonLang 0.2.2 更新日志
+# JLang 0.2.2 更新日志
 
-## 新特性
+## 系统命令执行功能
 
-- **系统命令执行功能**：新增 `exec` 语句，允许执行操作系统命令并捕获输出结果
-- **跨平台支持**：自动适配 Windows (cmd) 和 Unix 系统 (sh) 的命令执行环境
-- **结构化命令输出**：执行结果以结构化对象形式存储，包含标准输出、标准错误和状态码
+JLang 0.2.2 版本添加了执行系统命令的能力，让你可以从 JLang 程序中与底层操作系统交互。
 
-## 语法增强
+## 主要更新
 
-- 新增 `exec` 语句语法，支持指定命令、参数和结果变量：
-  ```json
-  {"exec": {
-      "cmd": "命令名",
-      "args": ["参数1", "参数2", "@var.变量参数"],
-      "output": "结果变量名"  // 可选，默认为 "result"
-  }}
-  ```
+### 1. `exec` 命令
 
-## 文档更新
-
-- 更新了语法文档 (`docs/syntax.md`)，添加了 `exec` 语句的详细说明和示例
-- 更新了 README 文件，在特性列表和语法概述中添加了系统命令执行功能
-
-## 示例程序
-
-- 添加了 Windows 环境示例 `examples/exec_demo.jl`
-- 添加了 Unix 环境示例 `examples/exec_unix_demo.jl`
-
-## 使用示例
+新增的 `exec` 命令允许你执行系统命令并捕获其输出：
 
 ```json
-// 执行系统命令并获取输出
-{"exec": {
-    "cmd": "dir",
-    "output": "dir_content"
-}},
-{"echo": ["目录内容：\n", "@var.dir_content.stdout"]}
-
-// 执行带参数的命令
-{"exec": {
-    "cmd": "echo",
-    "args": ["Hello from JsonLang!"],
-    "output": "echo_result"
-}},
-{"echo": ["输出: ", "@var.echo_result.stdout"]}
+{
+    "program": {
+        "main": {
+            "body": [
+                {"echo": ["执行系统命令示例：\n"]},
+                {"exec": "ls -la"},
+                {"echo": ["\n命令执行完成\n"]}
+            ]
+        }
+    }
+}
 ```
 
-## 注意事项
+### 2. 捕获命令输出
 
-- 使用 `exec` 语句时请注意安全风险，避免执行不受信任的命令
-- 命令执行环境取决于运行 JsonLang 的操作系统
+你可以将命令的输出存储到变量中：
+
+```json
+{
+    "program": {
+        "main": {
+            "body": [
+                {"exec": {"command": "date", "result": "currentDate"}},
+                {"echo": ["当前日期是: ", "@var.currentDate", "\n"]}
+            ]
+        }
+    }
+}
+```
+
+### 3. 命令错误处理
+
+`exec` 命令会捕获命令的退出状态和错误输出：
+
+```json
+{
+    "program": {
+        "main": {
+            "body": [
+                {"exec": {"command": "some-invalid-command", "result": "output", "error": "err", "exitCode": "code"}},
+                {"if": {
+                    "condition": {"op": "neq", "left": "@var.code", "right": 0},
+                    "then": [
+                        {"echo": ["命令失败，退出代码: ", "@var.code", "\n"]},
+                        {"echo": ["错误信息: ", "@var.err", "\n"]}
+                    ],
+                    "else": [
+                        {"echo": ["命令成功: ", "@var.output", "\n"]}
+                    ]
+                }}
+            ]
+        }
+    }
+}
+```
+
+## 平台特定注意事项
+
+不同操作系统上可用的命令会有所不同：
+
+- Windows 系统可以使用 CMD 或 PowerShell 命令
+- Linux/macOS 系统可以使用 Bash 命令
+
+## 安全注意事项
+
+执行系统命令功能功能强大但也带来安全隐患。在生产环境中使用时请确保：
+
+1. 不要执行不受信任的输入
+2. 限制执行权限
+3. 考虑使用沙盒环境
+
+## 示例文件
+
+新增了两个示例文件：
+
+- `exec_demo.jl`：基本系统命令执行示例
+- `exec_unix_demo.jl`：Unix特定命令示例
