--- a/docs/0.2.3.md
+++ b/docs/0.2.3.md
@@ -1,29 +1,49 @@
-# JsonLang 0.2.3 更新日志
+# JLang 0.2.3 更新日志
 
-## 增强弱类型系统
+## 增强的弱类型系统与比较操作
 
-### 类型转换改进
-- **布尔值处理**：布尔值现在在数学运算中会自动转换为数字（true=1, false=0）
-- **Null值处理**：null值在数学运算和比较中会被视为0
-- **空容器处理**：空数组和空对象在数学运算中被视为0，非空容器无法转换为数字并会产生错误提示
-- **错误提示优化**：对于无法转换的类型，现在提供更详细的错误信息
+在 JLang 0.2.3 版本中，我们对弱类型系统进行了重大增强，特别是改进了类型转换和比较操作的一致性。
 
-### 条件比较增强
-- **跨类型比较**：
-  - 字符串与数字可以直接比较（例如："42" == 42）
-  - 布尔值与数字可以直接比较（例如：true == 1）
-  - null值与数字0视为相等
-- **强化特殊类型处理**：
-  - 数值字符串在比较中会尝试转换为数字
-  - 布尔值和数字的大小比较更加符合直觉
+### 主要更新
 
-### 显示输出改进
-- **类型敏感输出**：echo语句现在可以根据不同类型提供相应的显示格式
-- **容器类型支持**：数组和对象可以直接输出，保持其JSON结构
-- **null显示优化**：null值现在会显示为"null"而不是空字符串
+1. **类型转换改进**
+   - 增强了数值和字符串之间的自动转换
+   - 改进了布尔值与其他类型之间的转换规则
+   - 为复杂操作添加了更智能的类型推断
+
+2. **比较操作增强**
+   - 优化了不同类型数据之间的比较逻辑
+   - 增加了类型敏感比较选项
+   - 统一了比较操作行为，提高了一致性
+
+3. **其他改进**
+   - 改进了错误处理和错误消息
+   - 修复了多个与类型系统相关的bug
+   - 性能优化，特别是对频繁的类型转换操作
+
+### 示例
+
+```json
+{
+    "program": {
+        "main": {
+            "body": [
+                {"var": {"num": 42, "str": "42", "bool": true}},
+                {"echo": ["数值比较: ", {"op": "eq", "left": "@var.num", "right": "@var.str"}, "\n"]},
+                {"echo": ["布尔转换: ", {"op": "add", "left": "@var.bool", "right": 1}, "\n"]},
+                {"echo": ["条件测试: ", {"op": "and", "left": "@var.str", "right": "@var.bool"}, "\n"]}
+            ]
+        }
+    }
+}
+```
+
+### 向后兼容性
+
+此更新完全向后兼容，所有现有的 JLang 程序应该继续正常运行，同时受益于改进的类型处理。
 
 ## 弱类型演示程序
-- 新增`weak_typing_demo.jl`示例程序，全面展示JsonLang的弱类型特性：
+- 新增`weak_typing_demo.jl`示例程序，全面展示JLang的弱类型特性：
   - 变量类型灵活性
   - 隐式类型转换
   - 条件语句中的类型处理
