--- a/docs/0.3.0.md
+++ b/docs/0.3.0.md
@@ -1,4 +1,4 @@
-# JsonLang 0.3.0 更新日志
+# JLang 0.3.0 更新日志
 
 ## 主要更新
 
@@ -286,7 +286,7 @@ return Err(InterpreterError::ModuleError(
   
 ```bash
 # 容错模式运行
-jsonlang --ignore-non-critical-errors examples/my_program.jl
+jlang --ignore-non-critical-errors examples/my_program.jl
 ```
 
 - `--check`：仅检查语法和语义错误
@@ -296,7 +296,36 @@ jsonlang --ignore-non-critical-errors examples/my_program.jl
 
 ```bash
 # 只检查错误，不执行
-jsonlang --check examples/my_program.jl
+jlang --check examples/my_program.jl
+```
+
+### 信息查询选项
+
+- `--help`：显示帮助信息
+  - 提供命令行选项列表和简要用法说明
+  - 帮助开发者快速了解JLang的基本使用方法
+
+```bash
+# 显示帮助信息
+jlang --help
+```
+
+- `--about`：显示关于信息
+  - 提供JLang的基本介绍和项目地址
+  - 帮助用户了解JLang的功能和特点
+
+```bash
+# 显示关于信息
+jlang --about
+```
+
+- `--creator`：显示创建者信息
+  - 展示JLang的创建者和项目相关信息
+  - 表达对开源贡献者的感谢
+
+```bash
+# 显示创建者信息
+jlang --creator
 ```
 
 ### 既有命令行选项
@@ -308,10 +337,10 @@ jsonlang --check examples/my_program.jl
 
 ```bash
 # 调试模式运行
-jsonlang --debug examples/my_program.jl
+jlang --debug examples/my_program.jl
 ```
 
-这些新增的命令行选项使得JsonLang在开发、测试和生产环境中都能更灵活地运行。
+这些新增的命令行选项使得JLang在开发、测试和生产环境中都能更灵活地运行。
 
 ## 兼容性说明
 
@@ -336,122 +365,6 @@ jsonlang --debug examples/my_program.jl
 ## 数组操作增强
 
 ### 内置数组方法
-JsonLang 0.3.0 版本增加了更丰富的数组操作支持：
+JLang 0.3.0 版本增加了更丰富的数组操作支持：
 
 - 创建数组: `array.create`
-- 添加元素: `array.push`
-- 删除元素: `array.pop`
-- 获取元素: `array.get`
-- 设置元素: `array.set`
-- 获取长度: `array.length`
-- 数组切片: `array.slice`
-
-### 数组遍历语法
-全新的 `for...in` 语法，允许直接遍历数组中的元素：
-
-```json
-{"for": {
-  "var": "item",
-  "in": "@var.myArray",
-  "body": [...]
-}}
-```
-
-### 数组索引访问
-通过方括号语法直接访问数组索引：
-
-```json
-{"echo": ["数组第一个元素是: ", "@var.myArray[0]"]}
-```
-
-也可以在复杂表达式中使用：
-
-```json
-{"var": {"firstElement": "@var.result[0]"}}
-```
-
-## 开关语句 (switch)
-
-增加了 `switch` 语句的支持，可以根据不同值执行不同分支的代码：
-
-```json
-{"switch": {
-  "value": "@var.status",
-  "cases": {
-    "success": [
-      {"echo": ["操作成功!"]}
-    ],
-    "error": [
-      {"echo": ["出错了: ", "@var.errorMessage"]}
-    ],
-    "default": [
-      {"echo": ["未知状态: ", "@var.status"]}
-    ]
-  }
-}}
-```
-
-## 错误处理优化
-
-### 集中化错误信息管理
-- 集中管理所有错误消息，便于整体维护和国际化
-- 模块化错误分类，更清晰的错误定位
-- 更详细的错误分类和提示，提高调试效率
-
-### 更精细的错误分类
-- 语法错误 (SyntaxError)
-- 运行时错误 (RuntimeError) 
-- 变量错误 (VariableError)
-- 函数错误 (FunctionError)
-- 模块错误 (ModuleError)
-- 解释器错误 (InterpreterError)
-
-### 命令行选项
-- `--ignore-non-critical-errors`: 忽略非关键性错误，让程序继续执行
-- `--check`: 只检查错误，不执行程序
-
-使用示例:
-```bash
-jsonlang --ignore-non-critical-errors app.jl  # 忽略非关键错误
-jsonlang --check app.jl                      # 仅检查错误
-```
-
-## 对象操作
-
-### 对象的创建与管理
-- 创建对象: `object.create`
-- 获取属性: `object.get`
-- 设置属性: `object.set`
-- 检查属性: `object.has`
-- 获取所有键: `object.keys`
-- 获取所有值: `object.values`
-- 删除属性: `object.delete`
-
-基本用法:
-```json
-{"object.create": {"name": "张三", "age": 25}},
-{"var": {"user": "@var.result"}},
-{"object.get": ["@var.user", "name"]}
-```
-
-## 正则表达式支持
-
-### 正则表达式操作
-- 模式匹配: `regex.match`
-- 测试匹配: `regex.test`
-- 替换内容: `regex.replace`
-- 分割字符串: `regex.split`
-
-基本用法:
-```json
-{"regex.match": ["\\d+", "年龄是25岁"]},
-{"var": {"match": "@var.result"}},
-{"echo": ["匹配结果: ", "@var.match[0]"]}
-```
-
-## 系统稳定性和性能提升
-
-- 改进了内存管理，降低了资源占用
-- 优化了JSON解析速度
-- 完善了错误处理和边界条件检查
-- 修复了已知的所有bug 
