--- a/docs/0.2.2.md
+++ b/docs/0.2.2.md
@@ -1,8 +1,8 @@
-# JLang 0.2.2 更新日志
+# JiLang 0.2.2 更新日志
 
 ## 系统命令执行功能
 
-JLang 0.2.2 版本添加了执行系统命令的能力，让你可以从 JLang 程序中与底层操作系统交互。
+JiLang 0.2.2 版本添加了执行系统命令的能力，让你可以从 JiLang 程序中与底层操作系统交互。
 
 ## 主要更新
 
