--- a/docs/0.2.3.md
+++ b/docs/0.2.3.md
@@ -1,8 +1,8 @@
-# JLang 0.2.3 更新日志
+# JiLang 0.2.3 更新日志
 
 ## 增强的弱类型系统与比较操作
 
-在 JLang 0.2.3 版本中，我们对弱类型系统进行了重大增强，特别是改进了类型转换和比较操作的一致性。
+在 JiLang 0.2.3 版本中，我们对弱类型系统进行了重大增强，特别是改进了类型转换和比较操作的一致性。
 
 ### 主要更新
 
@@ -40,10 +40,10 @@
 
 ### 向后兼容性
 
-此更新完全向后兼容，所有现有的 JLang 程序应该继续正常运行，同时受益于改进的类型处理。
+此更新完全向后兼容，所有现有的 JiLang 程序应该继续正常运行，同时受益于改进的类型处理。
 
 ## 弱类型演示程序
-- 新增`weak_typing_demo.jl`示例程序，全面展示JLang的弱类型特性：
+- 新增`weak_typing_demo.jl`示例程序，全面展示JiLang的弱类型特性：
   - 变量类型灵活性
   - 隐式类型转换
   - 条件语句中的类型处理
