--- a/docs/0.3.0.md
+++ b/docs/0.3.0.md
@@ -1,4 +1,4 @@
-# JLang 0.3.0 更新日志
+# JiLang 0.3.0 更新日志
 
 ## 主要更新
 
@@ -286,7 +286,7 @@ return Err(InterpreterError::ModuleError(
   
 ```bash
 # 容错模式运行
-jlang --ignore-non-critical-errors examples/my_program.jl
+JiLang --ignore-non-critical-errors examples/my_program.jl
 ```
 
 - `--check`：仅检查语法和语义错误
@@ -296,36 +296,36 @@ jlang --ignore-non-critical-errors examples/my_program.jl
 
 ```bash
 # 只检查错误，不执行
-jlang --check examples/my_program.jl
+JiLang --check examples/my_program.jl
 ```
 
 ### 信息查询选项
 
 - `--help`：显示帮助信息
   - 提供命令行选项列表和简要用法说明
-  - 帮助开发者快速了解JLang的基本使用方法
+  - 帮助开发者快速了解JiLang的基本使用方法
 
 ```bash
 # 显示帮助信息
-jlang --help
+JiLang --help
 ```
 
 - `--about`：显示关于信息
-  - 提供JLang的基本介绍和项目地址
-  - 帮助用户了解JLang的功能和特点
+  - 提供JiLang的基本介绍和项目地址
+  - 帮助用户了解JiLang的功能和特点
 
 ```bash
 # 显示关于信息
-jlang --about
+JiLang --about
 ```
 
 - `--creator`：显示创建者信息
-  - 展示JLang的创建者和项目相关信息
+  - 展示JiLang的创建者和项目相关信息
   - 表达对开源贡献者的感谢
 
 ```bash
 # 显示创建者信息
-jlang --creator
+JiLang --creator
 ```
 
 ### 既有命令行选项
@@ -337,10 +337,10 @@ jlang --creator
 
 ```bash
 # 调试模式运行
-jlang --debug examples/my_program.jl
+JiLang --debug examples/my_program.jl
 ```
 
-这些新增的命令行选项使得JLang在开发、测试和生产环境中都能更灵活地运行。
+这些新增的命令行选项使得JiLang在开发、测试和生产环境中都能更灵活地运行。
 
 ## 兼容性说明
 
@@ -365,6 +365,6 @@ jlang --debug examples/my_program.jl
 ## 数组操作增强
 
 ### 内置数组方法
-JLang 0.3.0 版本增加了更丰富的数组操作支持：
+JiLang 0.3.0 版本增加了更丰富的数组操作支持：
 
 - 创建数组: `array.create`
