--- a/docs/0.4.0.md
+++ b/docs/0.4.0.md
@@ -1,4 +1,4 @@
-# JiLang 0.4.0 版本更新日志
+# JiLang 0.4.0 版本更新日志（part1）
 
 ## 目录
 - [概述](#概述)
@@ -8,12 +8,16 @@
   - [函数式编程增强](#3-函数式编程增强)
   - [Lua模块支持](#4-lua模块支持)
   - [模块元数据系统](#5-模块元数据系统)
+  - [return语句增强](#6-return语句增强)
+  - [语法精简](#7-语法精简)
+  - [JSON属性操作](#8-json属性操作)
 - [代码改进](#代码改进)
   - [语句执行机制重构](#1-语句执行机制重构)
   - [兼容性系统](#2-兼容性系统)
   - [数学模块优化](#3-数学模块优化)
   - [模块系统优化](#4-模块系统优化)
   - [语法精简](#5-语法精简)
+  - [IO模块增强](#6-io模块增强)
 - [错误修复](#错误修复)
   - [递归算法问题修复](#1-递归算法问题修复)
   - [控制流执行修复](#2-控制流执行修复)
@@ -22,7 +26,7 @@
 
 ## 概述
 
-JiLang 0.4.0 版本带来了重大架构改进和新特性：引入了新的结果值返回机制，支持自定义结果变量，增强了函数式编程能力，添加了Lua模块支持，优化了数学模块的字符串数值处理，并改进了模块加载系统。本次更新为脚本编写提供了更强大的表达能力，同时注意0.4.0版本也移除了一些旧语法（如call语句），请参见[语法精简](#5-语法精简)部分了解迁移指南。
+JiLang 0.4.0 版本带来了重大架构改进和新特性：引入了新的结果值返回机制，支持自定义结果变量，增强了函数式编程能力，添加了Lua模块支持，优化了数学模块的字符串数值处理，增强了IO模块的JSON数据操作能力，并改进了模块加载系统。本次更新为脚本编写提供了更强大的表达能力，同时注意0.4.0版本也移除了一些旧语法（如call语句），请参见[语法精简](#7-语法精简)部分了解迁移指南。
 
 ## 主要特性
 
@@ -292,7 +296,65 @@ return {
 
 模块元数据系统为JiLang生态系统提供了自我描述和文档化的能力，实现了各类模块的统一标准，帮助开发者更好地理解和使用各种模块，同时为未来的模块管理和依赖系统奠定了基础。
 
-### 5. 语法精简
+### 6. return语句增强
+
+JiLang 0.4.0 版本增强了 return 语句的功能，使其支持更丰富的返回值类型和更清晰的显示：
+
+- return语句现在支持返回任意复杂的数据结构，包括对象和数组
+- 新增命令行参数`--print-full`，用于完整展示复杂结果值的内容
+- 优化了返回值在控制台中的显示格式，提高可读性
+- 增强了在函数嵌套调用中的return行为一致性
+
+示例：
+
+```json
+{
+    "program": {
+        "get_user_info": {
+            "params": ["user_id"],
+            "body": [
+                {"return": {
+                    "id": "@params.user_id",
+                    "name": "张三",
+                    "profile": {
+                        "age": 25,
+                        "skills": ["编程", "设计", "写作"]
+                    }
+                }}
+            ]
+        },
+        "main": {
+            "body": [
+                {"var": {"user": {"get_user_info": [1001]}}},
+                {"echo": ["用户信息: ", "@var.user", "\n"]}
+            ]
+        }
+    }
+}
+```
+
+使用`--print-full`参数查看完整返回值：
+
+```bash
+# 默认输出（只显示<object>）
+$ jilang example.jl
+用户信息: <object>
+
+# 使用--print-full查看完整内容
+$ jilang --print-full example.jl
+用户信息: {
+  "id": 1001,
+  "name": "张三",
+  "profile": {
+    "age": 25,
+    "skills": ["编程", "设计", "写作"]
+  }
+}
+```
+
+这一增强功能极大地改善了处理复杂数据结构的能力，特别是在调试和开发过程中，能够清晰地查看函数的完整返回值。
+
+### 7. 语法精简
 
 0.4.0版本移除了旧版`call`语句，这是一个破坏性变更：
 
@@ -324,6 +386,41 @@ return {
   ```
 
 这一变更是语言简化和统一化的一部分，使JiLang的语法更加一致和符合直觉。虽然这是一个破坏性变更，但迁移过程简单明了，能够更好地利用JiLang 0.4.0中引入的新特性。
+
+### 8. JSON属性操作
+
+JiLang 0.4.0 版本为IO模块增加了强大的JSON属性操作功能，提供了直观高效的方式来访问和修改复杂JSON结构：
+
+- 新增`io.json_get`函数，支持使用点符号路径（如`user.profile.name`）轻松获取嵌套属性
+- 新增`io.json_set`函数，可以设置或修改JSON中的任意深度属性，自动创建不存在的中间节点
+- 支持数组索引访问（如`users.0.name`），实现数组元素的精确获取和修改
+- 提供完备的错误处理机制，包括无效JSON检测、路径验证和类型检查
+- 调试功能与全局`--debug`标志集成，便于跟踪JSON操作过程
+
+示例代码：
+
+```json
+{
+  "var": {
+    "user": {
+      "name": "测试用户",
+      "profile": {
+        "location": "北京",
+        "job": "开发者"
+      },
+      "scores": [85, 92, 78]
+    }
+  },
+  
+  "io.json_get": ["@var.user", "profile.location"],
+  "echo": ["位置: ", "@var.result", "\n"],
+  
+  "io.json_set": ["@var.user", "profile.skills", ["编程", "设计", "沟通"]],
+  "echo": ["更新后: ", "@var.result", "\n"]
+}
+```
+
+这些功能极大地简化了对复杂JSON数据的操作，特别是在处理配置文件、API响应或数据交换场景时，提供了更加简洁直观的方法，无需手动解析和重构JSON对象。
 
 ## 代码改进
 
@@ -392,6 +489,59 @@ fn extract_number_from_string(s: &str) -> Result<f64> {
     // 3. 继续尝试其他提取方法...
 }
 ```
+
+#### Math模块新增数学函数
+
+Math模块在0.4.0版本中新增了多个数学函数，极大地扩展了JiLang的数学计算能力：
+
+1. **绝对值和取整函数**
+   - `abs` - 计算绝对值
+   - `floor` - 向下取整
+   - `ceil` - 向上取整
+
+2. **三角函数（以角度制为单位）**
+   - `sin` - 计算正弦值
+   - `cos` - 计算余弦值
+   - `tan` - 计算正切值
+
+3. **对数函数**
+   - `log` - 计算以10为底的对数
+   - `ln` - 计算以e为底的自然对数
+
+4. **数组操作**
+   - `max` - 查找一组数值或数组中的最大值
+   - `min` - 查找一组数值或数组中的最小值
+
+5. **随机数生成**
+   - `random` - 生成指定范围内的随机数，支持0-1、0-max、min-max三种调用方式
+
+示例用法：
+
+```json
+{
+  "include": ["math"],
+  "program": {
+    "main": {
+      "body": [
+        {"math.abs": [-42], "output": "abs_result"},
+        {"echo": ["-42的绝对值: ", "@var.abs_result", "\n"]},
+        
+        {"math.sin": [30], "output": "sin_result"},
+        {"echo": ["30度的正弦值: ", "@var.sin_result", "\n"]},
+        
+        {"var": {"numbers": [3, 8, 1, 6, 2]}},
+        {"math.max": "@var.numbers", "output": "max_result"},
+        {"echo": ["数组最大值: ", "@var.max_result", "\n"]},
+        
+        {"math.random": [1, 100], "output": "rand_result"},
+        {"echo": ["1到100间的随机数: ", "@var.rand_result", "\n"]}
+      ]
+    }
+  }
+}
+```
+
+这些新增函数支持统一的数值转换机制，能够处理各种类型的输入并尝试转换为数值。特别是max和min函数，能够直接处理数组参数，简化数组处理的代码复杂度。随机数生成器则为游戏开发和模拟计算等场景提供了关键功能支持。
 
 ### 4. 模块系统优化
 
@@ -515,6 +665,28 @@ pub fn new(program: Value, modules: Vec<Box<dyn modules::Module>>) -> Result<Sel
 ```
 
 这一系列改进确保了各种类型的模块都能以统一的方式提供和访问元数据，为用户提供了一致的接口体验，同时保持了向后兼容性。
+
+### 6. IO模块增强
+
+IO模块在0.4.0版本中获得了全面增强，特别是在JSON数据处理和文件操作方面：
+
+- **JSON操作函数增强**
+  - 新增`json_get`和`json_set`函数，支持点符号路径深度访问JSON属性
+  - 实现了嵌套JSON结构的智能解析和创建逻辑
+  - 添加了数组索引访问支持，便于操作JSON数组数据
+  - 为JSON操作添加了友好的错误处理和调试输出
+
+- **文件操作扩展**
+  - 优化了文件读写函数的错误处理机制
+  - 改进了文件路径解析，支持基于脚本位置的相对路径
+  - 强化了文件和目录权限检查，提供更明确的错误提示
+
+- **调试支持**
+  - JSON操作函数与全局`--debug`标志集成，方便跟踪操作过程
+  - 在调试模式下提供详细的JSON路径访问和修改日志
+  - 添加了对象结构变更的可视化输出，便于确认修改结果
+
+这些改进使IO模块成为JiLang处理外部数据和文件的强大工具，大幅提升了语言在数据处理方面的能力，特别是在需要处理复杂JSON结构的场景中。文档说明和示例已添加到Wiki中，方便用户查阅和学习。
 
 ## 错误修复
 
@@ -744,3 +916,4 @@ jilang --modulemeta path/to/module.lua
 
 这些修复确保了JiLang的所有内置功能正常工作，无论是数组操作、对象处理还是正则表达式功能，提高了语言解析器的健壮性和可靠性。 
 
+# 其他更多内容请查看 0.4.0-part2.md
